# CVS

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CalibController.cpp  CalibController.h  Calibration.cpp  Calibration.h  Camera.cpp  Camera.h  CameraMatricController.cpp  CameraMatricController.h  Capture.cpp  Capture.h  CaptureController.cpp  CaptureController.h  CaptureThread.cpp  CaptureThread.h  CaptureWorker.cpp  CaptureWorker.h  ConfigController.cpp  ConfigController.h  ConfigRepository.cpp  ConfigRepository.h  FolderModel.cpp  FolderModel.h  FolderView.cpp  FolderView.h  FrameController.cpp  FrameController.h  FrameWorker.cpp  FrameWorker.h  Inference.cpp  Inference.h  InferenceController.cpp  InferenceController.h  InferenceWorker.cpp  InferenceWorker.h  (+18 more)
